fixed 78 whitespace style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,8 @@ font-style: 600;
   justify-content: space-between;
   min-width: 784px;
   position: relative;
-  left: 0; top: 0;
+  left: 0;
+  top: 0;
   width: 85%;
   height: 85%;
   padding-top: 100px;
